force-app/main/default/objects/DD_Attribute_Definition__c/DD_Attribute_Definition__c.object-meta.xml
<CustomObject>
    <description>Reusable attribute definitions attached to products or coverages. Drives configurable fields at quote time.</description>
    <label>Attribute Definition</label>
    <nameField><displayFormat>ATT-{00000}</displayFormat><label>Attribute ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Attribute Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>