force-app/main/default/objects/DD_Attribute_Definition__c/fields/Attribute_Code__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Code__c</fullName>
    <label>Attribute Code</label>
    <type>Text</type>
    <length>50</length><required>true</required><unique>true</unique><externalId>true</externalId>
    <description>System code e.g. ANNUAL_MAX, ORTHO_LIFETIME_MAX</description>
</CustomField>