force-app/main/default/objects/DD_Attribute_Definition__c/fields/Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name__c</fullName>
    <label>Attribute Name</label>
    <type>Text</type>
    <length>100</length><required>true</required><unique>true</unique><externalId>true</externalId>
    <description>Display name e.g. Annual Maximum, Ortho Lifetime Max</description>
</CustomField>