force-app/main/default/objects/DD_Attribute_Definition__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Currency</fullName><default>false</default><label>Currency</label></value><value><fullName>Percent</fullName><default>false</default><label>Percent</label></value><value><fullName>Number</fullName><default>false</default><label>Number</label></value><value><fullName>Boolean</fullName><default>false</default><label>Boolean</label></value><value><fullName>Picklist</fullName><default>false</default><label>Picklist</label></value><value><fullName>Text</fullName><default>false</default><label>Text</label></value></valueSetDefinition></valueSet>
    <description>Data type of this attribute</description>
</CustomField>