force-app/main/default/objects/DD_Attribute_Definition__c/fields/Is_Configurable__c.field-meta.xml
<CustomField>
    <fullName>Is_Configurable__c</fullName>
    <label>Configurable at Quote</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether agents can change this at quote time</description>
</CustomField>