force-app/main/default/objects/DD_Attribute_Definition__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <label>Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether a value must be selected</description>
</CustomField>