force-app/main/default/objects/DD_Attribute_Definition__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <label>Picklist Values</label>
    <type>LongTextArea</type>
    <length>5000</length><visibleLines>4</visibleLines>
    <description>JSON array of allowed values when Data_Type is Picklist</description>
</CustomField>